--- a/public/css/adjustments_bootstrap.less
+++ b/public/css/adjustments_bootstrap.less
@@ -1,3 +1,13 @@
+//////////////////////////////
+//
+// WANT TO ADD CHANGES? TAKE THIS FILE FROM PACKAGE IN UN HELPERS PROJECT
+//
+// DON'T FORGET TO STORE IT BACK TO IT!
+//
+////////////////////////////////
+
+
+
 @import url(//fonts.googleapis.com/css?family=Eczar:500|Dosis:500|Roboto:300&subset=latin,latin-ext);
 @import 'color_definitions_theme_1.less';
 
@@ -144,6 +154,33 @@ h4 {
     min-width: 10rem;
     max-width: 100%;
 }
+
+
+
+
+.text-greenish {
+  color: #5ef9c6!important;
+}
+.text-grey {
+  color: #666!important;
+}
+
+.text-yellow {
+  color: #dbd75f!important;
+}
+
+.bg-greenish {
+  background: #5ef9c6!important;
+}
+.bg-grey {
+  background: #666!important;
+}
+
+.bg-yellow {
+  background: #dbd75f!important;
+}
+
+
 
 
 
