--- a/public/css/adjustments_bootstrap.less
+++ b/public/css/adjustments_bootstrap.less
@@ -171,6 +171,7 @@ h4 {
 
 .bg-greenish {
   background: #5ef9c6!important;
+  color: #5a5055!important;
 }
 .bg-grey {
   background: #666!important;
