--- a/public/css/adjustments_bootstrap_advanced_presenter_en.less
+++ b/public/css/adjustments_bootstrap_advanced_presenter_en.less
@@ -1,15 +1,4 @@
-//////////////////////////////
-//
-// WANT TO ADD CHANGES? TAKE THIS FOLE FROM GITHUB PROJECT
-//
-// DON'T FORGET TO STORE IT BACK TO IT!
-//
-////////////////////////////////
-
-
-
 @import 'color_definitions_theme_1.less';
-
 
 
 .cf:before,
@@ -26,21 +15,6 @@
 .un_nav .dropdown .dropdown-menu a, .un_nav .dropdown a i {
     color: #333!important;
 
-}
-
-
-.m-3 {
-  margin: .3rem!important;
-}
-
-.p-1 {
-  padding: .1rem!important;
-}
-.p-2 {
-  padding: .2rem!important;
-}
-.m-1 {
-  margin: .1rem!important;
 }
 
 .un_nav .dropdown a {
@@ -66,13 +40,6 @@
 
 }
 
-
-
-
-
-#advertisement a {
-  max-height: 6rem;
-}
 
 #plate_widget .un_nav2 div {
   display: flex;
@@ -198,10 +165,6 @@ textarea {
 
 
 }
-
-
-
-
 
 
 .anim_border_1
@@ -507,7 +470,8 @@ footer ol,footer  ul {
 }
 
 .footer-list-top {
-  width: 25%;
+  /*width: 25%;*/
+      width: 33%;
 }
 
 .footer-list-top > li {
@@ -630,49 +594,6 @@ footer a i {
   font-style: normal;
 }
 
-
-
-
-
-
-
-
-.text-greenish {
-  color: #5ef9c6!important;
-}
-.text-grey {
-  color: #666!important;
-}
-
-.text-yellow {
-  color: #dbd75f!important;
-}
-
-.bg-greenish {
-  background: #5ef9c6!important;
-  color: #5a5055!important;
-}
-.bg-grey {
-  background: #666!important;
-}
-
-.bg-yellow {
-  background: #dbd75f!important;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media only screen and (max-width: 768px) {
   .footer-list-header {
     font-size: 2em;
@@ -696,7 +617,7 @@ footer a i {
 }
 @media only screen and (max-width: 568px) {
       main {
-        font-size: 5em;
+        
       }
 
       .footer-list-top {
@@ -810,55 +731,7 @@ footer a i {
 @media screen and (max-width: 55.5em)
 {
 
-    h1.m-2 {
-      font-size: 1.2rem;
-      margin: .2rem!important;
-    }
-    #top_header {
-      display: none!important;
-    }
 
-
-    .side-nav .line hr {
-
-        margin-top: 0;
-    }
-
-    #advertisement img {
-      max-width: 2rem!important;
-      width: 2rem!important;
-      height: 3rem;
-    }
-
-    #advertisement a {
-      max-height: 4rem;
-    }
-    #advertisement h5 {
-      padding: .6rem;
-    }
-
-
-
-
-    a#dropdownMenu2 i {
-        color: #ddf!important;
-    }
-
-    .col-xs-12.page-title-section   {
-
-    }
-    .col-xs-12.page-title-section > * {
-      font-size: 1rem!important;
-    }
-
-
-    .un_nav2 > * {
-      margin: .2rem!important;
-    }
-    .btn.btn-sm {
-      margin: .2rem!important;
-      padding: .4rem .8rem!important;
-    }
 
       #main {
         flex-direction: column;
@@ -928,17 +801,6 @@ footer a i {
       width: 80%;
       margin: .5rem auto;
     }
-
-
-    h2 .text-info, .un_wide20 {
-      display: block;
-      min-width: 90%!important;
-      width: 100%!important;
-
-
-    }
-
-
 
     .un_object>img {
 
@@ -1037,13 +899,6 @@ footer a i {
     padding: 0!important;
     margin: 0!important;
    }
-
-
-    .un_widgetpresenter>div>a>img {
-        max-height: 8rem;
-        max-width: 85%;
-    }
-
 
 
 
