--- a/public/css/elements_common.less
+++ b/public/css/elements_common.less
@@ -1,6 +1,6 @@
 //////////////////////////////
 //
-// WANT TO ADD CHANGES? TAKE THIS FILE FROM PACKAGE IN UN HELPERS PROJECT
+// WANT TO ADD CHANGES? TAKE THIS FOLE FROM GITHUB PROJECT
 //
 // DON'T FORGET TO STORE IT BACK TO IT!
 //
@@ -317,6 +317,7 @@ footer a i {
     justify-content: spaced-between;
 }
 
+
 .un_flex_wrap {
       flex-wrap: wrap;
 }
@@ -341,6 +342,10 @@ align-self: center;
     width: 100%;
     text-align: center;
     padding: 1rem;
+}
+
+.un_flex_c20 > * {
+  flex: 1 1 20rem!important;
 }
 
 .un_flex > .un_presenter2 {
@@ -874,6 +879,20 @@ h2 span {
   margin: 2rem;
 }
 
+
+.un_title_2 {
+
+
+  font: italic normal 700 12rem/120% "Open Sans", sans-serif;
+  font-size: 3rem!important;
+  color: white;
+  background: #555;
+  padding: 1rem;
+  text-align: center;
+
+
+}
+
 .un_user 
 {
     max-width: 100%;
@@ -1285,7 +1304,7 @@ color: @normal !important;
     box-shadow: inset 0px 0px 50px 0px #ABABAB,5px 5px 5px 1px #242424;
 
 }
-.un_shadow_2 {
+.un_shadow_2, .un_csch_soh_1:hover {
     box-shadow: 
      inset 0px 0px 10px 5px rgba(38,31,31,.2)
     , 2px 2px 3px 1px rgba(18,11,11,.3);
@@ -1298,6 +1317,10 @@ color: @normal !important;
 
 }
 
+
+.un_csch_soh_1:hover {
+  opacity: .9;
+}
 
 .csch_animate, article > .un_quote {
 
@@ -1335,9 +1358,9 @@ animation: animbg 16s ease infinite;
 }
 .un_wide12
 {
-    width: 12rem;
-    max-width: 12rem;
-    min-width: 12rem;
+    width: 12rem!important;
+    max-width: 12rem!important;
+    min-width: 12rem!important;
 }
 
 .un_wide16
