css updates again

--- a/public/css/color_definitions_theme_1.less
+++ b/public/css/color_definitions_theme_1.less
@@ -51,3 +51,6 @@
 @lnkext: rgba(75, 97, 170, 0.89);
 @lnk: rgba(75, 97, 170, 0.69);
 
+@objname: #dbd75f; // yellow
+@objsubname: #7bc79a ;
+@objlinkh: #7bc79a;
