--- a/public/css/elements_common.less
+++ b/public/css/elements_common.less
@@ -962,6 +962,37 @@ padding: .2rem;
     max-width: 20%;
 }
 
+
+
+
+
+.un_presenter_6 {
+    background-image: linear-gradient(-180deg, #15140F 0%, #34312C 97%);
+
+    h1 {
+      color: @objname;
+    }
+
+    > img {
+      flex: 1 1 20rem;
+      width:12rem!important;
+    }
+    div {
+      padding: .4rem;
+    }
+    > div:first-of-type {
+      background: @objname;
+      max-width: 12rem!important;
+      min-width: 12rem!important;
+      width: 12rem!important;
+    }
+
+}
+
+
+
+
+
 .un_count {
   font-size: 3rem;
   justify-content: center;
@@ -1167,7 +1198,6 @@ color: @step4 !important;
     background: linear-gradient(to right,rgba(35, 37, 38, 0.15) 0,rgba(108, 192, 237, 0.07) 44%,rgba(60, 104, 126, 0.22) 100%);
     color: @step4 !important;
 }
-
 
 
 .csch_subtle_12 {
