--- a/public/css/elements_common.less
+++ b/public/css/elements_common.less
@@ -1,6 +1,6 @@
 //////////////////////////////
 //
-// WANT TO ADD CHANGES? TAKE THIS FOLE FROM GITHUB PROJECT
+// WANT TO ADD CHANGES? TAKE THIS FILE FROM GITHUB PROJECT
 //
 // DON'T FORGET TO STORE IT BACK TO IT!
 //
@@ -314,7 +314,7 @@ footer a i {
 }
 .un_flex_even {
 
-    justify-content: spaced-between;
+    justify-content: space-between;
 }
 
 
@@ -635,7 +635,18 @@ h2 span {
   color: white!important;
 }
 
+.un_nav_3 > *:not("i") {
+  font-family: 'Ubuntu Condensed', sans-serif;
+  padding: .2rem!important;
+  margin: .2rem .6rem!important;
+  border: 0;
+  display: inline-block;
+  background: red;
+    box-shadow: 
+     inset 0px 0px 10px 5px rgba(38,31,31,.2)
+    , 2px 2px 3px 1px rgba(18,11,11,.3);
 
+}
 
 .nav-item {
     font: italic 700 1.3rem 'Open Sans';
@@ -1481,6 +1492,164 @@ animation: animbg 16s ease infinite;
 
     margin: 2rem;
 }
+
+
+
+//////////////////////////////
+//
+// TABS layouts
+//
+////////////////////////////////
+
+
+
+
+.un_tabs_1 {
+  list-style: none outside none;
+  margin: .5rem;
+
+}
+
+.un_tabs_1 li {
+  background: white;
+  border-bottom: 4px solid #E5E5E5;
+  margin: 0 10px 0 0;
+  display: inline-block;
+}
+
+.un_tabs_1 a {
+  color: #ccc;
+  display: block;
+  font-size: 18px;
+  font-weight: 300;
+  padding: 14px 24px;
+  text-decoration: none;
+}
+
+.un_tabs_1 li:hover {
+  background: #a0cac0;
+  border-bottom: 4px solid #68a697;
+}
+
+.un_tabs_1 li:hover A {
+  color: white;
+}
+
+.un_tabs_1 li a.active {
+  background: #a0cac0!important;
+}
+
+
+.un_tabs_2 {
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+  width: 100%;
+  font-weight: 300;
+  font-size: 1.25em;
+}
+
+/* Nav */
+.un_tabs_2 {
+  text-align: center;
+}
+
+.un_tabs_2 {
+  position: relative;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: flex;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 1200px;
+  list-style: none;
+  -ms-box-orient: horizontal;
+  -ms-box-pack: center;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+}
+
+.un_tabs_2 li {
+  position: relative;
+  z-index: 1;
+  display: block;
+  margin: 0;
+  text-align: center;
+  -webkit-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.un_tabs_2 a {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 2.5;
+}
+
+.un_tabs_2 a span {
+  vertical-align: middle;
+  font-size: 0.75em;
+}
+
+.un_tabs_2 li a.active {
+  color: #74777b;
+}
+
+.un_tabs_2 a:focus {
+  outline: none;
+}
+
+
+.un_tabs_2  {
+  background: #fff;
+}
+
+.un_tabs_2  a {
+  padding: 0.25em 0 0.5em;
+  border-left: 1px solid #e7ecea;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+}
+
+.un_tabs_2  li:last-child a {
+  border-right: 1px solid #e7ecea;
+}
+
+.un_tabs_2  li a::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 6px;
+  background: #2CC185;
+  content: '';
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  -webkit-transform: translate3d(0,150%,0);
+  transform: translate3d(0,150%,0);
+}
+
+.un_tabs_2  li a.active::after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.un_tabs_2  a span {
+  font-weight: 700;
+}
+
 
 
 
